# jhaktaa

./: CMakeLists.txt  run_jhatkaa.bat  tmp_connect_test.cpp
src/: gateitem.cpp  gateitem.h  logicengine.h  main.cpp  mainwindow.cpp  mainwindow.h
