cmake_minimum_required(VERSION 3.16)
project(Jhatkaa LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt6 REQUIRED COMPONENTS Widgets)

add_executable(jhatkaa
    src/main.cpp
    src/mainwindow.cpp
    src/mainwindow.h
    src/gateitem.cpp
    src/gateitem.h
    src/logicengine.h
)

target_link_libraries(jhatkaa PRIVATE Qt6::Widgets)
